--- a/dasmoto.html
+++ b/dasmoto.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dasmoto</title>
+    <title>Dasmoto's Arts & Crafts</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
+
 <body>
     <header>
-        <h1>Dasmoto's Arts & Crafts</h1>
+        <h1 class="heading">Dasmoto's Arts & Crafts</h1>
     </header>
+
     <main>
-        <h2 class="brushes">Brushes</h2>
-        <h2 class="frames">Frames</h2>
-        <h2 class="paint">Paint</h2>
+        <h2 class="subheading" id="brushes">Brushes</h2>
+        <h3>Hacksaw Brushes</h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span style='color: blue; font-weight: bold;'>Starting at $3.00 / brush.</span></p>
+        
+        <h2 class="subheading" id="frames">Frames</h2>
+        <h3>Art Frames (assorted)</h3>
+        <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span style='color: blue; font-weight: bold;'>Starting at $2.00 / frame.</span></p>
+        
+        <h2 class="subheading" id="paint">Paint</h2>
+        <h3>Clean Finnish Paint</h3>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span style='color: blue; font-weight: bold;'>Starting at $5.00 / tube.</span></p>
     </main>
-</body>
 </body>
 </html>
